# framelabs

./: .gitignore  README.md  index.html  pyproject.toml
src/framelabs/app/: main.py
src/framelabs/camera/: camera_interface.py  camera_manager.py  webcam_backend.py
src/framelabs/capture/: capture_service.py  commands.py  frame_writer.py  metadata.py
src/framelabs/core/: command.py  config.py  event_bus.py  logger.py  undo_manager.py
src/framelabs/image_processing/: histogram.py
src/framelabs/plugins/: plugin_interface.py  plugin_manager.py
src/framelabs/project/: autosave.py  creator.py  project.py  serializer.py
src/framelabs/timeline/: onion_skin.py  playback.py  timeline.py
src/framelabs/ui/: camera_controller.py  capture_controller.py  histogram_widget.py  inspector_panel.py  live_view_controller.py  live_view_widget.py  main_window.py  new_project_dialog.py  onion_skin_controller.py  playback_controller.py  project_browser_widget.py  project_controller.py  theater_view_dialog.py  (+1 more)
tests/: conftest.py  test_autosave.py  test_camera_controller.py  test_camera_manager.py  test_capture_service.py  test_commands.py  test_config.py  test_creator.py  test_event_bus.py  test_frame_writer.py  test_histogram.py  test_live_view_controller.py  test_metadata.py  test_onion_skin.py  test_onion_skin_controller.py  test_playback.py  test_playback_controller.py  test_plugin_manager.py  test_project.py  test_project_browser_widget.py  test_serializer.py  test_theater_view_dialog.py  test_timeline.py  test_timeline_widget.py  test_undo_manager.py  test_webcam_backend.py
