[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "framelabs"
version = "0.1.0"
description = "An open-source, professional stop-motion animation application with seamless Blender integration."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Chris Gale" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "PySide6>=6.11",
    "opencv-python>=5.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "isort",
    "pytest",
    "pytest-cov",
]

[project.scripts]
framelabs = "framelabs.app.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
